--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,6 @@ Content{
     justify-content: center;
 }
 
-#exportButton,#viewPasswordTable,#addNewPasswordForm,#startNewVaultForm,#showAddNew{
+#exportButton,#viewPasswordTable,#addNewPasswordForm,#startNewVaultForm,#showAddNew,#createNewVault{
     display: none;
 }
