--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body, tbody{
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif
     
 }
 
